# data-pipeline-quality-lab

./: .dockerignore  .env.example  .gitignore  BEGINNER_TESTING_GUIDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: live-ons-contract.yml  quality.yml
docs/: ARCHITECTURE.md  TEST_STRATEGY.md
docs/adr/: 0001-dbt-owns-business-transformations.md  0002-postgresql-and-minio.md  0003-defer-orchestration-framework.md
evidence/: sample-quality-report.md
src/pipeline_quality/: __init__.py  cli.py  evidence.py  exceptions.py  fixture_pipeline.py  manifest.py  models.py  object_store.py  ons_client.py  spark_job.py  spark_transform.py
tests/: conftest.py  test_cli.py  test_evidence.py  test_fixture_pipeline.py  test_manifest.py  test_object_store.py  test_ons_client.py  test_ons_live.py  test_spark_contract.py  test_spark_transform.py
tests/fixtures/: filter-created.json  filter-definition.json  filter-error.json  filter-pending.json  filter-ready.json  filter-submitted.json  ons-population.csv  ons-population.csvw
warehouse/: .user.yml  dbt_project.yml  profiles.yml
warehouse/macros/: generate_schema_name.sql
warehouse/models/: sources.yml
warehouse/models/audit/: audit_layer_counts.sql
warehouse/models/dimensions/: dim_age.sql  dim_geography.sql  dim_sex.sql  (+1 more)
warehouse/seeds/: raw_ons_observations.csv
warehouse/tests/: assert_fixture_totals.sql  assert_layer_counts_reconcile.sql  assert_no_negative_observations.sql
(+6 files in other folders)
